<resources>
    <string name="app_name">ChatApp</string>
    <string name="developer_text">This application was developed by <b>İBRAHİM DURNA</b></string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="crop">Crop</string>
    <string name="all_photos">All Photos</string>
    <string name="chatapp_user">ChatApp User</string>
    <string name="A5S0">Touch for account information</string>
    <string name="typing">typing…</string>
    <string name="enter_message">Type a message</string>
    <string name="A5S1">This account is no longer available. That\'s why you can\'t send messages anymore.</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="background">Background</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="chat_history">Chat history</string>
    <string name="clear_all_chats">Clear all chats</string>
    <string name="delete_all_chats">Delete all chats</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="A8S0">Use a darker theme to keep your eyes comfortable at night. Dark theme is recommended for your eyes.</string>
    <string name="enable">Enable</string>
    <string name="delete_account">Delete Account</string>
    <string name="A9S0">Are you sure you want to delete the account? If you delete the account, all your data will be deleted.</string>
    <string name="current_password">Current Password</string>
    <string name="A9S1">To delete the account, we need to verify that it belongs to you.</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="choose_gender">* Choose a gender</string>
    <string name="birthday">Birthday</string>
    <string name="choose_location">* Choose a location</string>
    <string name="email">Email</string>
    <string name="optional">* optional</string>
    <string name="location">Location</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="A11S0">We just need your registered email to send your password reset instructions</string>
    <string name="send">Send</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="no_friends">No friends</string>
    <string name="gallery">Gallery</string>
    <string name="no_photos">No photos</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="chats">Chats</string>
    <string name="you">You</string>
    <string name="you_are_friends">You are friends</string>
    <string name="_0_friends">0 Friends</string>
    <string name="_0_mutual_f">0 Mutual F.</string>
    <string name="wants_to_be_your_friend">Wants to be your friend?</string>
    <string name="confirm">Confirm</string>
    <string name="gender">Gender</string>
    <string name="cancel_request">Cancel request</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="mutual">Mutual</string>
    <string name="finish">Finish</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password_helper">* Password must be at least 6 characters</string>
    <string name="next">Next</string>
    <string name="almost_done">Almost Done!</string>
    <string name="back">Back</string>
    <string name="_finish">Finish!</string>
    <string name="account_information">Account Information</string>
    <string name="enter_a_birthday">* Enter a birthday</string>
    <string name="no_recent_searches">No recent searches</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="searches">Searches</string>
    <string name="security">Security</string>
    <string name="new_password">New Password</string>
    <string name="must_be_different_with_old_password">*Must be different with old password</string>
    <string name="password_must_be_at_least_6_characters">* Password must be at least 6 characters</string>
    <string name="settings">Settings</string>
    <string name="edit_settings_helper">Profile Image, Email, Gender, Birthday, Location</string>
    <string name="change_password">Change Password</string>
    <string name="chat_settings_helper">Background, Chat History</string>
    <string name="theme">Theme</string>
    <string name="theme_settings_helper">Dark Mode, Theme Color</string>
    <string name="delete_account_permanently">Delete Account Permanently</string>
    <string name="application_developer">Application, Developer</string>
    <string name="logout">Logout</string>
    <string name="close_account">Close Account</string>
    <string name="add_title">Add title…</string>
    <string name="solid_color">Solid color</string>
    <string name="start_helper_text">Are you ready to join us! Register now and find your friends.</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="dark_mode_helper">Use a darker theme to keep your eyes comfortable at night</string>
    <string name="theme_color">Theme color</string>
    <string name="apply">Apply</string>
    <string name="update_email">Update Email</string>
    <string name="new_email">New Email</string>
    <string name="we_need_a_password_to_update_your_email_address">We need a password to update your email address</string>
    <string name="update">Update</string>
    <string name="write_message">Write Message</string>
    <string name="new_group">New group (Coming Soon)</string>
    <string name="add_friend">Add friend</string>
    <string name="no_background">No background</string>
    <string name="_you">You :</string>
    <string name="view_profile">View profile</string>
    <string name="delete_media_from_my_phone">Delete media from my phone</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="close">Close</string>
    <string name="delete_message">Delete message</string>
    <string name="unsend_message">Unsend message</string>
    <string name="copy_text">Copy text</string>
    <string name="please_wait">Please wait…</string>
    <string name="big_online">ONLINE</string>
    <string name="big_friends">FRIENDS</string>
    <string name="sending_pictures">Sending pictures</string>
    <string name="camera">Camera</string>
    <string name="title">Title</string>
    <string name="count">Count</string>
    <string name="options">Options</string>
    <string name="more_options">More Options</string>
    <string name="share">Share</string>
    <string name="delete_friend">Delete friend</string>
    <string name="profile_picture">Profile picture</string>
    <string name="delete_photo">Delete photo</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="requests">Requests</string>
    <string name="account">Account</string>
    <string name="seen">Seen</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_seen_today">Last seen today</string>
    <string name="last_seen_yesterday">Last seen yesterday</string>
    <string name="last_seen">Last seen</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="couldnt_refresh_feed">Couldn\'t refresh feed.</string>
    <string name="online">online</string>
    <string name="mutual_f">Mutual F.</string>
    <string name="no_chat">No chat</string>
    <string name="no_request">No request</string>
    <string name="deleting_account">Deleting account. Please wait…</string>
    <string name="password_incorrect">Password is incorrect.</string>
    <string name="creating_account">Creating an account may take some time. Please wait…</string>
    <string name="cannot_sign_in">Cannot Sign in. Please check the from and try again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="email_is_used">This email is used</string>
    <string name="email_incorrect">Email is incorrect. Please enter a valid email address.</string>
    <string name="enter_a_vaild_email">Please enter a valid email address.</string>
    <string name="no_account_for_this_email">No account for this email address was found.</string>
    <string name="this_may_take_some_time">This may take some time. Please wait…</string>
    <string name="password_changed_success">Password changed successfully.</string>
    <string name="the_new_password_can_not_be">The new password can not be the same as the old password.</string>
    <string name="current_password_incorrect">Current password is incorrect.</string>
    <string name="we_sent_mail_to">We sent mail to</string>
    <string name="email_updated_success">Email updated successfully.</string>
    <string name="permission_content">You need to provide the necessary permissions to reach this section, please go to the settings and give the necessary permissions.</string>
    <string name="_settings">Settings!</string>
    <string name="photos">photos</string>
    <string name="photo">photo</string>
    <string name="download">Download</string>
    <string name="screen_shots">ScreenShots</string>
    <string name="hello_i_am">Hello, I am</string>
    <string name="would_join_chatapp">would you like to join us? ChatApp Inc.</string>
    <string name="subject_here">Subject Here</string>
    <string name="_clear_search_history">Clear search history?</string>
    <string name="clear">Clear</string>
    <string name="version">version</string>
    <string name="background_does_not_already_exist">Background does not already exist!</string>
    <string name="deleted_background">Deleted background!</string>
    <string name="background_success_changed">Background successfully changed.</string>
    <string name="are_you_sure_clear_all_chat">Are you sure you want to clear all chat?</string>
    <string name="all_chats_cleared">All chats cleared</string>
    <string name="are_you_sure_delete_all_chat">Are you sure you want to delete all chat?</string>
    <string name="all_chats_deleted">All chats deleted</string>
    <string name="delete_dialog_content">Are you sure you want to delete the account? We will miss you.</string>
    <string name="_delete">Delete!</string>
    <string name="enter_a_name">* Enter a name</string>
    <string name="enter_a_surname">* Enter a surname</string>
    <string name="enter_a_valid_phone_number">Enter a valid phone number</string>
    <string name="unsaved_content">You have unsaved changes. Are you sure want to cancel?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="password_are_the_same">* Password are the same</string>
    <string name="password_are_different">* Password are different</string>
    <string name="password_is_good">* Password is good</string>
    <string name="password_is_medium">* Password is medium</string>
    <string name="log_out_of_chatapp">Log out of ChatApp?</string>
    <string name="nice_to_see_you_among_us">Nice to see you among us. Welcome</string>
    <string name="_photo">Photo</string>
    <string name="could_not_be_found">cloud not be found.</string>
    <string name="compressing">Compressing…</string>
    <string name="messages">Messages</string>
    <string name="reply">Reply</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="friendship_confirm">Friendship Confirm</string>
</resources>