<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.StartActivity"
    android:background="?attr/backgroundBrushColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textColor="?attr/primaryTextColor"
        android:textSize="40sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_helper_text"
            android:textSize="18sp"
            android:textColor="?attr/primaryTextColor"/>

        <Button
            android:id="@+id/new_account_btn"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="onClick"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_already_have_an_account"/>

        <TextView
            android:id="@+id/have_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/login"
            android:textColor="@color/selector_item_accent_color"
            android:onClick="onClick"/>
    </LinearLayout>
</RelativeLayout>