<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundBrushColor"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_collapseMode="pin"
        app:contentInsetStartWithNavigation="0dp"
        android:layout_gravity="bottom"
        app:titleTextAppearance="@style/CollapsedTitleTextAppearance"
        app:title="@string/about"
        app:titleTextColor="?attr/primaryTextColor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/info_view"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:padding="18dp"
            android:src="@drawable/ic_about_icon"
            android:onClick="onClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="sans-serif-light"
                android:textColor="?attr/primaryTextColor"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/version_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/about_developer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textColor="?attr/primaryTextColor"
            android:textSize="15sp"
            android:text="@string/developer_text"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>
    </RelativeLayout>

</RelativeLayout>