<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/sheet_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/profile_picture"
           android:layout_marginStart="25dp"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:layout_marginEnd="25dp"
           android:textSize="20sp"
           android:textColor="@android:color/white"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:background="@drawable/custom_circle_text_view"
           android:backgroundTint="?attr/backgroundCardColor"
           android:padding="15dp"
           android:gravity="center"
           android:layout_below="@id/sheet_title">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">

               <ImageView
                   android:id="@+id/gallery_item"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_gallery_icon"
                   android:background="@drawable/custom_circle_text_view"
                   android:backgroundTint="?attr/colorAccent"
                   android:padding="16dp"
                   android:layout_gravity="center"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/gallery"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">

               <ImageView
                   android:id="@+id/camera_item"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_camera_icon"
                   android:background="@drawable/custom_circle_text_view"
                   android:backgroundTint="?attr/colorAccent"
                   android:padding="16dp"
                   android:layout_gravity="center"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/camera"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"/>
           </LinearLayout>

           <LinearLayout
               android:id="@+id/delete_item_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical">

               <ImageView
                   android:id="@+id/delete_item"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_delete_white_icon"
                   android:background="@drawable/custom_circle_text_view"
                   android:backgroundTint="?attr/colorAccent"
                   android:padding="16dp"
                   android:layout_gravity="center"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/delete_photo"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"/>
           </LinearLayout>
       </LinearLayout>
   </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>