<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/pvtRadiusColor"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/view_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="15dp"
                    android:background="@drawable/top_item_view"
                    android:backgroundTint="?attr/backgroundCardColor">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_share_icon"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_profile"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mark_as_read_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="15dp"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_share_icon"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mark_as_read"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="16sp"/>
                </LinearLayout>

                <View
                    android:id="@+id/chat_dialog_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/lineColor"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <CheckBox
                    android:id="@+id/delete_device_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_media_from_my_phone"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry"
                    android:checked="true"/>

                <LinearLayout
                    android:id="@+id/clear_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="15dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_clean_icon"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_chat"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="16sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/delete_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="20dp"
                    android:paddingTop="15dp"
                    android:background="@drawable/bottom_item_view"
                    android:backgroundTint="?attr/backgroundCardColor">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_remove_icon"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete_chat"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
    </LinearLayout>
</RelativeLayout>